[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools-scm[toml]>=8",
]

[project]
name = "gammasimtools"
description = "Tools for the Simulation System of the CTA Observatory"
readme = "README.md"
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
authors = [
  { name = "simtools developers", email = "simtools-developer@desy.de" },
]
requires-python = ">=3.14"
classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dynamic = [
  "version",
]
dependencies = [
  "adjusttext",
  "astropy",
  "boost-histogram",
  "ctao-dpps-cosmic-ray-spectra",
  "eventio",
  "h5py",
  "jsonschema",
  "matplotlib",
  "numpy",
  "particle",
  "pymongo",
  "pyproj",
  "python-dotenv",
  "pyyaml",
  "scipy",
]
optional-dependencies.dev = [
  "flake8",
  "flake8-cognitive-complexity",
  "pre-commit",
  "pylint",
  "ruff",
]
optional-dependencies.doc = [
  "myst-parser",
  "numpydoc",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-design",
  "towncrier",
]
optional-dependencies.tests = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-profiling",
  "pytest-random-order",
  "pytest-repeat",
  "pytest-requirements",
  "pytest-retry",
  "pytest-xdist",
]
urls."bug tracker" = "https://github.com/gammasim/simtools/issues"
urls.documentation = "https://gammasim.github.io/simtools/"
urls.repository = "https://github.com/gammasim/simtools"
scripts.simtools-compare-productions = "simtools.applications.compare_productions:main"
scripts.simtools-convert-all-model-parameters-from-simtel = "simtools.applications.convert_all_model_parameters_from_simtel:main"
scripts.simtools-convert-geo-coordinates-of-array-elements = "simtools.applications.convert_geo_coordinates_of_array_elements:main"
scripts.simtools-convert-model-parameter-from-simtel = "simtools.applications.convert_model_parameter_from_simtel:main"
scripts.simtools-db-add-file-to-db = "simtools.applications.db_add_file_to_db:main"
scripts.simtools-db-add-simulation-model-from-repository-to-db = "simtools.applications.db_add_simulation_model_from_repository_to_db:main"
scripts.simtools-db-add-value-from-json-to-db = "simtools.applications.db_add_value_from_json_to_db:main"
scripts.simtools-db-generate-compound-indexes = "simtools.applications.db_generate_compound_indexes:main"
scripts.simtools-db-get-array-layouts-from-db = "simtools.applications.db_get_array_layouts_from_db:main"
scripts.simtools-db-get-file-from-db = "simtools.applications.db_get_file_from_db:main"
scripts.simtools-db-get-parameter-from-db = "simtools.applications.db_get_parameter_from_db:main"
scripts.simtools-db-inspect-databases = "simtools.applications.db_inspect_databases:main"
scripts.simtools-db-upload-model-repository = "simtools.applications.db_upload_model_repository:main"
scripts.simtools-derive-bias-curves = "simtools.applications.derive_bias_curves:main"
scripts.simtools-derive-ctao-array-layouts = "simtools.applications.derive_ctao_array_layouts:main"
scripts.simtools-derive-incident-angle = "simtools.applications.derive_incident_angle:main"
scripts.simtools-derive-mirror-rnda = "simtools.applications.derive_mirror_rnda:main"
scripts.simtools-derive-photon-electron-spectrum = "simtools.applications.derive_photon_electron_spectrum:main"
scripts.simtools-derive-psf-parameters = "simtools.applications.derive_psf_parameters:main"
scripts.simtools-derive-pulse-shape-parameters = "simtools.applications.derive_pulse_shape_parameters:main"
scripts.simtools-derive-trigger-rates = "simtools.applications.derive_trigger_rates:main"
scripts.simtools-docs-produce-array-element-report = "simtools.applications.docs_produce_array_element_report:main"
scripts.simtools-docs-produce-calibration-reports = "simtools.applications.docs_produce_calibration_reports:main"
scripts.simtools-docs-produce-model-parameter-reports = "simtools.applications.docs_produce_model_parameter_reports:main"
scripts.simtools-docs-produce-production-summary = "simtools.applications.docs_produce_production_summary:main"
scripts.simtools-docs-produce-simulation-configuration-report = "simtools.applications.docs_produce_simulation_configuration_report:main"
scripts.simtools-export-sim-telarray-metadata-schema = "simtools.applications.export_sim_telarray_metadata_schema:main"
scripts.simtools-generate-array-config = "simtools.applications.generate_array_config:main"
scripts.simtools-generate-bias-curve-submissions = "simtools.applications.generate_bias_curve_submissions:main"
scripts.simtools-generate-corsika-histograms = "simtools.applications.generate_corsika_histograms:main"
scripts.simtools-generate-default-metadata = "simtools.applications.generate_default_metadata:main"
scripts.simtools-generate-regular-arrays = "simtools.applications.generate_regular_arrays:main"
scripts.simtools-generate-simtel-event-data = "simtools.applications.generate_simtel_event_data:main"
scripts.simtools-inspect-file = "simtools.applications.inspect_file:main"
scripts.simtools-maintain-simulation-model-add-production = "simtools.applications.maintain_simulation_model_add_production:main"
scripts.simtools-maintain-simulation-model-compare-productions = "simtools.applications.maintain_simulation_model_compare_productions:main"
scripts.simtools-maintain-simulation-model-verify-production-tables = "simtools.applications.maintain_simulation_model_verify_production_tables:main"
scripts.simtools-maintain-simulation-model-write-array-element-positions = "simtools.applications.maintain_simulation_model_write_array_element_positions:main"
scripts.simtools-merge-tables = "simtools.applications.merge_tables:main"
scripts.simtools-plot-array-layout = "simtools.applications.plot_array_layout:main"
scripts.simtools-plot-corsika-limits = "simtools.applications.plot_corsika_limits:main"
scripts.simtools-plot-production-grid = "simtools.applications.plot_production_grid:main"
scripts.simtools-plot-simtel-events = "simtools.applications.plot_simtel_events:main"
scripts.simtools-plot-simulated-event-distributions = "simtools.applications.plot_simulated_event_distributions:main"
scripts.simtools-plot-tabular-data = "simtools.applications.plot_tabular_data:main"
scripts.simtools-plot-tabular-data-for-model-parameter = "simtools.applications.plot_tabular_data_for_model_parameter:main"
scripts.simtools-production-derive-corsika-limits = "simtools.applications.production_derive_corsika_limits:main"
scripts.simtools-production-derive-monte-carlo-statistics = "simtools.applications.production_derive_monte_carlo_statistics:main"
scripts.simtools-production-generate-grid = "simtools.applications.production_generate_grid:main"
scripts.simtools-resources-test-generate = "simtools.applications.resources_test_generate:main"
scripts.simtools-resources-test-sync = "simtools.applications.resources_test_sync:main"
scripts.simtools-run-application = "simtools.applications.run_application:main"
scripts.simtools-simulate-flasher = "simtools.applications.simulate_flasher:main"
scripts.simtools-simulate-illuminator = "simtools.applications.simulate_illuminator:main"
scripts.simtools-simulate-pedestals = "simtools.applications.simulate_pedestals:main"
scripts.simtools-simulate-prod = "simtools.applications.simulate_prod:main"
scripts.simtools-simulate-prod-htcondor-generator = "simtools.applications.simulate_prod_htcondor_generator:main"
scripts.simtools-submit-array-layouts = "simtools.applications.submit_array_layouts:main"
scripts.simtools-submit-data-from-external = "simtools.applications.submit_data_from_external:main"
scripts.simtools-submit-model-parameter-from-external = "simtools.applications.submit_model_parameter_from_external:main"
scripts.simtools-validate-camera-efficiency = "simtools.applications.validate_camera_efficiency:main"
scripts.simtools-validate-camera-fov = "simtools.applications.validate_camera_fov:main"
scripts.simtools-validate-cumulative-psf = "simtools.applications.validate_cumulative_psf:main"
scripts.simtools-validate-file-using-schema = "simtools.applications.validate_file_using_schema:main"
scripts.simtools-validate-optics = "simtools.applications.validate_optics:main"
scripts.simtools-write-reduced-event-lists = "simtools.applications.write_reduced_event_lists:main"
scripts.simtools-write-trigger-histograms = "simtools.applications.write_trigger_histograms:main"

[tool.setuptools]
packages.find.where = [ "src" ]
packages.find.exclude = [ "simtools._dev_version.*" ]
package-dir = { "" = "src" }

[tool.setuptools_scm]
write_to = "src/simtools/_version.py"

[tool.ruff]
line-length = 100
indent-width = 4
exclude = [
  "__init__.py",
  "pyproject.toml",
  "simtools/_version.py",
]
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
# no documentation linting for test files
format.skip-magic-trailing-comma = false
lint.select = [ "E4", "E7", "E9", "F" ]
lint.extend-select = [
  "A",      # built-in shadowing
  "C4",     # comprehension
  "C90",    # mccabe complex structure
  "COM",    # flake8-commas
  "D",      # pydocstyle
  "ERA",    # commented-out code
  "F",      # pyflakes
  "G",      # logging
  "I",      # isort
  "ICN",    # import name conventions
  "ISC",    # implicit string concat rules
  "N",      # pep8 naming
  "NPY",    # numpy
  "PT",     # pytest
  "PTH",    # use pathlib
  "RET",    # return statements
  "RUF",    # ruff
  "RUF069", # float equality comparison (preview)
  "UP",     # pyupgrade
]
lint.ignore = [
  "COM812", # incompatible with ruff format
  "D208",   # over-indentation (incompatible with sphinx)
  "D214",   # section-not-over-indented
  "D215",   # section-underline-not-over-indented
  "G004",   # Logging statement uses f-string
  "ISC001", # incompatible with ruff format
  "PTH123", # open("foo") should be replaced by Path("foo").open()
  "RUF012", # Mutable class attributes should be annotated
]
lint.explicit-preview-rules = true
lint.per-file-ignores."**/tests/**" = [
  "D",
]
lint.per-file-ignores."**/tests_*.py" = [
  "D",
]
lint.mccabe.max-complexity = 12
lint.pydocstyle.convention = "numpy"
lint.preview = true

[tool.pylint]
main.disable = [
  "logging-fstring-interpolation",
  "R0801",                         # duplications
]
# see https://github.com/pylint-dev/pylint/issues/2289
main.generated-members = [
  "gist_heat_r",
]
# Good variable names which should always be accepted, separated by a comma.
main.good-names = [
  "ax",
  "C1",
  "C2",
  "C3",
  "C4",
  "C4x",
  "ce",
  "db",
  "e",
  "ex",
  "f",
  "hess",
  "i",
  "im",
  "j",
  "k",
  "lst",
  "magic",
  "mst",
  "n",
  "N1",
  "N2",
  "N3",
  "N4",
  "N4x",
  "r",
  "sct",
  "sh",
  "sst",
  "veritas",
  "x",
  "xx",
  "y",
  "yy",
  "zz",
]
# Ignore files
main.ignore = [
  "__init__.py",
  "_version.py",
  "scm_version.py",
]
# see https://stackoverflow.com/questions/49846940/incorrect-pylint-errors-on-astropy-in-vscode
# (required to suppress warnings from astropy.units when using pylint; not only vscode)
main.ignored-classes = [
  "astropy.units",
]
# Maximum number of arguments for function / method (default=5).
main.max-args = 15
# Maximum number of attributes for a class (see R0902). (default=7)
main.max-attributes = 20
# Maximum number of branch for function / method body. (default=12)
main.max-branches = 15
# Maximum number of characters on a single line.
main.max-line-length = 100
# Maximum number of locals for function / method body (default=15).
main.max-locals = 30
# Maximum number of lines in a module. (default 1000)
main.max-module-lines = 1500
# Maximum number of positional arguments for function / method (default=5.)
main.max-positional-arguments = 15
# Maximum number of public methods for a class (see R0904). (default=20)
main.max-public-methods = 30
# Maximum number of statements in function / method body. (default=50)
main.max-statements = 80
# Minimum number of public methods for a class (see R0903). (default=2)
main.min-public-methods = 1

[tool.codespell]
ignore-words-list = "chec,arrang,livetime,astroid"

[tool.pytest]
ini_options.minversion = "6.0"
ini_options.testpaths = "tests/unit_tests/"
ini_options.norecursedirs = [
  "build",
  "docs/_build",
  "src/simtools/applications",
]
ini_options.addopts = [
  "-v",
  "--cov=simtools",
  "--cov-report=xml",
  "--cov-report=term",
  "-p",
  "pytest_requirements",
]
ini_options.markers = [
  "db_unit_test: test belongs to unit_tests/db and must not use global DatabaseHandler patching.",
  "uses_model_database: test uses model parameter database.",
]
ini_options.filterwarnings = [
  # treat warnings as errors
  "error",
  # Ignore the warning about fontTools.misc.py23
  "ignore:The py23 module has been deprecated:DeprecationWarning",
]

[tool.coverage]
run.omit = [ "*__init__*", "src/simtools/_version.py", "src/simtools/applications/**" ]
run.relative_files = true
report.exclude_also = [
  'if __name__ == "__main__":',
]

[tool.towncrier]
package = "simtools"
directory = "docs/changes"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## [{version}](https://github.com/gammasim/simtools/releases/tag/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/gammasim/simtools/pull/{issue})"
underlines = [ "", "", "" ]
fragment.api.name = "API Changes"
fragment.api.showcontent = true
fragment.bugfix.name = "Bugfixes"
fragment.bugfix.showcontent = true
fragment.doc.name = "Documentation"
fragment.doc.showcontent = true
fragment.feature.name = "New Features"
fragment.feature.showcontent = true
fragment.maintenance.name = "Maintenance"
fragment.maintenance.showcontent = true
fragment.model.name = "Simulation model"
fragment.model.showcontent = true

[tool.gammasimtools]
dependency-versions.schema_version = "0.1.0"
dependency-versions.python = "3.14"
dependency-versions.apptainer = "1.5.0"
dependency-versions.cpu-variants = [ "generic", "avx2", "avx512f", "sse4" ]
dependency-versions.archives.autoconf.version = "2.71"
dependency-versions.archives.autoconf.sha256 = "431075ad0bf529ef13cb41e9042c542381103e80015686222b8a9d4abef42a1c"
dependency-versions.archives.gsl.version = "2.8"
dependency-versions.archives.gsl.sha256 = "6a99eeed15632c6354895b1dd542ed5a855c0f15d9ad1326c6fe2b2c9e423190"
dependency-versions.base-image.name = "docker.io/library/almalinux"
dependency-versions.base-image.runtime-version = "9.8-minimal"
dependency-versions.base-image.runtime-digest = "sha256:b0d6d72e3fc19c51119e3dbeee5a7211eba934d8dcf7d3ecddadf96b681645ed"
dependency-versions.base-image.build-version = "9.8"
dependency-versions.base-image.build-digest = "sha256:d2515c769e7b73f95c4fde38c0a505336ff38f14990c0b7253b77060a049a743"
dependency-versions.model-database.name = "CTAO-Simulation-Model"
dependency-versions.model-database.default-version = "0.16.0"
dependency-versions.production-combinations = [
  { corsika = "78010", sim-telarray = "v2025-11-30-rc", cpu-variants = [ "generic", "avx2", "avx512f", "sse4" ] },
  { corsika = "78050", sim-telarray = "v2025-11-30-rc", cpu-variants = [ "generic", "avx2", "avx512f", "sse4" ] },
]

[[tool.gammasimtools.dependency-versions.corsika]]
version = "78010"
source-ref = "v7.8010"
source-url = "https://gitlab.iap.kit.edu/AirShowerPhysics/corsika-legacy/corsika7.git"
config-version = "v0.1.0"
config-source-url = "https://gitlab.cta-observatory.org/cta-computing/dpps/simpipe/simulation_software/corsika7-config.git"
config-revision = "6766beb24abf2c71d413af681b3d77aa4f41548e"
opt-patch-version = "v1.1.0"
opt-patch-source-url = "https://gitlab.cta-observatory.org/cta-computing/dpps/simpipe/simulation_software/corsika-opt-patches.git"
opt-patch-revision = "e481fdf9eaa45c2f1846823f5d3d68ea24cf3a47"
image-digests = { generic = "sha256:6b25807c084b947becad2eac1385c12f7e4c0f2800205f51f31b68e938d567dd", avx2 = "sha256:96298f92f623c60fdd33e07e3272c59279671f6b89570c187c4d5cdb38c7d580", avx512f = "sha256:4952325c6680db173df9076208193045c4717ecfe18bb406bf16d94fd9b3c355", sse4 = "sha256:a9ddc4b0cb1d6ded0f943853a6a79c2a0e8a31e6a9b842c10dcde706614bda0c" }

[[tool.gammasimtools.dependency-versions.corsika]]
version = "78050"
source-ref = "v7.8050"
source-url = "https://gitlab.iap.kit.edu/AirShowerPhysics/corsika-legacy/corsika7.git"
config-version = "v1.0.0"
config-source-url = "https://gitlab.cta-observatory.org/cta-computing/dpps/simpipe/simulation_software/corsika7-config.git"
config-revision = "47e6d1f35310a9b32ba838f0c247609da2e619b3"
opt-patch-version = "v1.2.0"
opt-patch-source-url = "https://gitlab.cta-observatory.org/cta-computing/dpps/simpipe/simulation_software/corsika-opt-patches.git"
opt-patch-revision = "8b516bc33f6a364d9e9dade34b183d551babc144"
image-digests = { generic = "sha256:555cd09a33fc18632e8efa4dd136e480f7a2b57e1f37923edc37f81f09cd3345", avx2 = "sha256:6523a3299c19d4a1561675d54a86d997f726445fff527bb2ec6e73b70eadf9bc", avx512f = "sha256:41309cbba0fd24199ff0790637aabef36b8666beb613f30cc4a1c7c4922f56b9", sse4 = "sha256:52ad3ab0b1aa4f44b84fc96b03d7480728e3b0547a217511667de6c932cc0ec9" }

[[tool.gammasimtools.dependency-versions.sim-telarray]]
version = "v2025-11-30-rc"
source-url = "https://gitlab.cta-observatory.org/cta-computing/dpps/simpipe/simulation_software/sim_telarray.git"
revision = "6de7bb5ce0d6b309fed959eee4fb071f55c91018"
hessio-version = "v2025-12-01-rc"
hessio-source-url = "https://gitlab.cta-observatory.org/cta-computing/dpps/simpipe/simulation_software/hessio.git"
hessio-revision = "b97b807b804aad29ecfeb54a57c54fc7c4fb0820"
stdtools-version = "v2025-06-16-rc"
stdtools-source-url = "https://gitlab.cta-observatory.org/cta-computing/dpps/simpipe/simulation_software/stdtools.git"
stdtools-revision = "9c109a4e2398e30dc014a24cf2b6bc15b61290e7"
image-digest = "sha256:22d7b90cb90fcd022f88176fa5d7815f2821232cdb98268df0d5cfd9970984f4"
